# ulppk2-demo

./: .cproject  .project  Doxyfile  Makefile.am  Makefile.in  README  config.h.in~  config4debug  configure  configure.ac  doxygen.conf  runconfigure.sh
autom4te.cache/: output.2  requests  traces.0  traces.1  traces.2
demolibs/: Makefile.am  Makefile.in  democonfig.c  democonfig.h
etc/: demoserver.ini
src/: Makefile.am  Makefile.in  core  create-demo-server-files.sh  demoserver.c  demoserver.env  demoserver.ini  demosocketclient.c  demosocketclient.ini  demosocketserver.c  in1.txt
